# blanchett

./: CMakeLists.txt  README.md
include/blanchett/: actors.hpp
include/blanchett/actors/: actor.hpp  consumer.hpp  job.hpp  pool.hpp  quit.hpp  reactor.hpp  simple_reactor.hpp  stl_queue_adaptor.hpp  thread.hpp
src/lib/actors/: job.cpp  quit.cpp
src/test/: test.cpp
